Limpando ainda mais a interface

--- a/views/framework/apps/apps-inc.ejs
+++ b/views/framework/apps/apps-inc.ejs
@@ -1,6 +1,6 @@
 <div class="tab-pane mt-3" id="nav-apps" role="tabpanel" aria-labelledby="nav-apps-tab">
   <div class="alert alert-warning show" role="alert">
-    <strong><i class="bi bi-shield-shaded"></i>&nbsp;&nbsp;Aplicativos</strong><small>: requer permissão
+    <strong><i class="bi bi-shield-shaded"></i>&nbsp;&nbsp;Aplicativos</strong><small> : <i class="bi bi-key-fill"></i>
       [<strong>apps</strong>]</small>
   </div>
   <div class="container-alert alert-apps"></div>
