--- a/views/framework/tools/entity/entity-create-inc.ejs
+++ b/views/framework/tools/entity/entity-create-inc.ejs
@@ -1,7 +1,7 @@
 <div class="tab-pane mt-3" id="entity-create" role="tabpanel" aria-labelledby="entity-create-tab">
     <div class="alert alert-warning show" role="alert">
         <strong><i class="bi bi-shield-shaded"></i>&nbsp;&nbsp;Criar entidade</strong>
-        <small>: requer permissão [<strong>entity-create</strong>]</small>
+        <small>: <i class="bi bi-key-fill"></i> [<strong>entity-create</strong>]</small>
     </div>
     <div class="flex-column">
         <form class="form-group">
