--- a/views/framework/desktop/desktop-inc.ejs
+++ b/views/framework/desktop/desktop-inc.ejs
@@ -1,6 +1,6 @@
 <div class="tab-pane mt-3 show active" id="nav-desktop" role="tabpanel" aria-labelledby="nav-desktop-tab">
   <div class="alert alert-warning show" role="alert">
-    <strong><i class="bi bi-shield-shaded"></i>&nbsp;&nbsp;Mesa</strong><small>: requer permissão
+    <strong><i class="bi bi-shield-shaded"></i>&nbsp;&nbsp;Mesa</strong><small> : <i class="bi bi-key-fill"></i>
       [<strong>desktop</strong>]</small>
   </div>
   <div id="desktop"></div>
