--- a/views/framework/tools/sql/sql-inc.ejs
+++ b/views/framework/tools/sql/sql-inc.ejs
@@ -1,7 +1,7 @@
 <div class="tab-pane mt-3" id="sql-terminal" role="tabpanel" aria-labelledby="sql-terminal-tab">
   <div class="alert alert-warning show" role="alert">
     <strong><i class="bi bi-shield-shaded"></i>&nbsp;&nbsp;Sql</strong>
-    <small>: requer permissão [<strong>sql</strong>]</small>
+    <small>: <i class="bi bi-key-fill"></i> [<strong>sql</strong>]</small>
   </div>
   <div class="form-group">
     <form class="form-group">
