Espero que seja o último ajuste na Interface antes das 15h

--- a/views/blocks/aes-help-dock.ejs
+++ b/views/blocks/aes-help-dock.ejs
@@ -1,9 +1,10 @@
-<div class="offcanvas fade offcanvas-top text-white" tabindex="-1" id="aes-help-dock" aria-labelledby="aes-helpLabel"
-    style="background-color: #000000; border-bottom: 1px solid #ff9500; height: 500px; opacity: 0.75;">
+<div class="offcanvas fade offcanvas-top text-white shadow" tabindex="-1" id="aes-help-dock" aria-labelledby="aes-helpLabel"
+    style="background-color: #000000; border-bottom: 1px solid #000000; border-top: 2px solid #b3ff00; opacity: 0.5; height: 100%;">
     <div class="offcanvas-body">
         <nav class="nav fixed-top p-2">
             <div class="container-fluid">
-                <a href="/framework"><img src="assets/images/arte-e-software-cubo-branco.svg" height="30rem"></a>
+                <button data-bs-toggle="offcanvas" data-bs-dismiss="#aes-help-dock" role="button" aria-controls="aes-help-dock" class="btn btn-sm btn-success"><i class="bi bi-x-circle"></i></button>
+                <span class="mx-2"><img src="assets/images/arte-e-software-cubo-branco.svg" height="30rem"></span>
             </div>
         </nav>
     </div>
