--- a/views/blocks/dock.ejs
+++ b/views/blocks/dock.ejs
@@ -1,7 +1,7 @@
-<nav class="nav p-2" style="background-color: #333333; border-top: 1px solid #ff9500;">
+<nav class="nav p-2" style="background-color: #333333;">
     <div class="container-fluid">
-        <a data-bs-toggle="offcanvas" href="#aes-help-dock" role="button" aria-controls="aes-help-dock"
-            id="a-aes-help"><img src="assets/images/arte-e-software-cubo-branco.svg" height="30rem"></a>
+        <button data-bs-toggle="offcanvas" data-bs-target="#aes-help-dock" role="button" aria-controls="aes-help-dock" class="btn btn-sm btn-success"><i class="bi bi-question-circle"></i></button>
+        <span class="mx-2"><img src="assets/images/arte-e-software-cubo-branco.svg" height="30rem"></span>
     </div>
 </nav>
 <style>
