Lorem ipsum dolor sit amet

--- a/views/blocks/aes-help-dock.ejs
+++ b/views/blocks/aes-help-dock.ejs
@@ -1,11 +1,156 @@
-<div class="offcanvas fade offcanvas-top text-white shadow" tabindex="-1" id="aes-help-dock" aria-labelledby="aes-helpLabel"
-    style="background-color: #000000; border-bottom: 1px solid #000000; border-top: 2px solid #b3ff00; opacity: 0.5; height: 100%;">
+<div class="offcanvas fade offcanvas-top text-white shadow" tabindex="-1" id="aes-help-dock"
+    aria-labelledby="aes-helpLabel"
+    style="background-color: #000000; border-bottom: 1px solid #000000; border-top: 2px solid #b3ff00; opacity: 0.75; height: 100%;">
     <div class="offcanvas-body">
         <nav class="nav fixed-top p-2">
             <div class="container-fluid">
-                <button data-bs-toggle="offcanvas" data-bs-dismiss="#aes-help-dock" role="button" aria-controls="aes-help-dock" class="btn btn-sm btn-success"><i class="bi bi-x-circle"></i></button>
-                <span class="mx-2"><img src="assets/images/arte-e-software-cubo-branco.svg" height="30rem"></span>
+                <button data-bs-toggle="offcanvas" data-bs-dismiss="#aes-help-dock" role="button"
+                    aria-controls="aes-help-dock" class="btn btn-sm btn-success"><i class="bi bi-x-circle"></i></button>
             </div>
         </nav>
+        <div class="container-fluid text-white pt-5">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ornare justo at mauris tincidunt
+                luctus. Nullam scelerisque, ligula at facilisis mattis, magna risus hendrerit massa, vel commodo tortor
+                nunc vel libero. Ut vulputate tempor neque, vel hendrerit sem hendrerit a. Maecenas ullamcorper leo sit
+                amet augue condimentum, ut lobortis neque porta. Aliquam ultricies, ex et vulputate mattis, libero nulla
+                efficitur lectus, ut imperdiet massa ex vel dolor. Nam scelerisque urna lacus, eu finibus turpis porta
+                et. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris
+                vitae imperdiet nulla, eu varius dui. Cras et massa nisi. Curabitur at posuere ipsum. Ut a sollicitudin
+                massa. Proin pellentesque, dui quis tincidunt aliquam, mauris turpis ullamcorper nulla, id consequat
+                massa lacus ut libero. Sed pretium leo venenatis est bibendum, eu blandit nibh mollis. Integer convallis
+                malesuada mauris, facilisis pretium nisl. Cras et pulvinar augue, et euismod sapien. Maecenas egestas
+                ante nunc, sed finibus nulla ullamcorper sit amet.
+            </p>
+            <p>
+                Cras commodo dui vitae lacus sodales, sed volutpat ante sagittis. Fusce in diam et nisi fringilla tempus
+                eget sit amet magna. Vivamus euismod, lectus gravida consequat maximus, nulla ante ultricies odio, sed
+                semper nisl sem vel nisi. Etiam justo enim, viverra quis mauris ac, volutpat fermentum sem. Duis augue
+                mi, tincidunt eu blandit ac, mattis at est. Aenean gravida urna nulla, eu interdum lacus hendrerit ut.
+                Phasellus efficitur purus et turpis maximus fringilla.
+            </p>
+            <p>
+                Cras sed augue scelerisque est elementum aliquet a hendrerit felis. Orci varius natoque penatibus et
+                magnis dis parturient montes, nascetur ridiculus mus. Vivamus nibh purus, rutrum vitae eros eget, varius
+                commodo tellus. Quisque elementum lorem rhoncus magna molestie imperdiet. Praesent aliquam tempus velit
+                vel consequat. Cras nisl dui, scelerisque sit amet cursus molestie, posuere varius nisi. In eleifend
+                enim a pharetra egestas. Sed ipsum nisi, scelerisque vel pharetra sed, fermentum non nulla. Duis eget
+                egestas neque. Nulla orci sem, auctor ac tempor at, convallis non odio. Vestibulum eleifend diam quis
+                pharetra efficitur. Fusce a bibendum velit. Morbi scelerisque porta sapien, sed cursus tellus eleifend
+                ut. Etiam dictum dapibus massa non mattis. Praesent sed vulputate ante.
+            </p>
+            <p>
+                Quisque rutrum dolor sed eros finibus ultricies vel ut erat. Pellentesque tincidunt velit id dui
+                commodo, vel ultrices lorem tincidunt. Suspendisse lectus urna, aliquam ac interdum sit amet, porttitor
+                scelerisque justo. Pellentesque vel euismod turpis. Morbi tellus massa, feugiat tempor purus varius,
+                sodales faucibus dui. Phasellus blandit quam consequat varius tristique. Morbi non tellus congue,
+                pretium metus vel, posuere ante. Pellentesque pulvinar, ipsum non rhoncus ullamcorper, justo lectus
+                eleifend risus, eu ultricies massa orci et nibh. Vivamus posuere tellus quis dui scelerisque
+                sollicitudin. Integer ac nibh ut tortor efficitur venenatis. Mauris pretium finibus leo non iaculis.
+                Nunc a aliquet sem. Proin fringilla, augue quis sollicitudin porttitor, ex sem pellentesque erat, at
+                ornare diam ipsum ut purus. Aliquam sed eleifend nisi, vehicula vestibulum risus. Morbi ullamcorper erat
+                eros, a varius diam vestibulum in.
+            </p>
+            <p>
+                Mauris ut nisl accumsan, sagittis lacus id, dictum lectus. Quisque sit amet ipsum erat. Sed non odio ut
+                nisl dignissim volutpat. Phasellus vehicula condimentum sem et varius. Maecenas ipsum mi, ultrices eu
+                rhoncus a, ultrices sed mi. Nullam fringilla nisl orci, vitae pulvinar nulla convallis nec. Fusce
+                vulputate sed velit vitae interdum. Cras auctor ex quis tempor facilisis. Praesent tincidunt tortor nec
+                ligula varius tempus. Ut placerat purus quis fringilla interdum. Curabitur vel viverra leo. Nulla
+                facilisi. Praesent nisl urna, convallis ut tincidunt id, vulputate nec massa. Quisque laoreet orci at
+                dolor mollis, eu blandit felis sodales
+            </p>
+            <p>
+                Cras commodo dui vitae lacus sodales, sed volutpat ante sagittis. Fusce in diam et nisi fringilla tempus
+                eget sit amet magna. Vivamus euismod, lectus gravida consequat maximus, nulla ante ultricies odio, sed
+                semper nisl sem vel nisi. Etiam justo enim, viverra quis mauris ac, volutpat fermentum sem. Duis augue
+                mi, tincidunt eu blandit ac, mattis at est. Aenean gravida urna nulla, eu interdum lacus hendrerit ut.
+                Phasellus efficitur purus et turpis maximus fringilla.
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ornare justo at mauris tincidunt
+                luctus. Nullam scelerisque, ligula at facilisis mattis, magna risus hendrerit massa, vel commodo tortor
+                nunc vel libero. Ut vulputate tempor neque, vel hendrerit sem hendrerit a. Maecenas ullamcorper leo sit
+                amet augue condimentum, ut lobortis neque porta. Aliquam ultricies, ex et vulputate mattis, libero nulla
+                efficitur lectus, ut imperdiet massa ex vel dolor. Nam scelerisque urna lacus, eu finibus turpis porta
+                et. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris
+                vitae imperdiet nulla, eu varius dui. Cras et massa nisi. Curabitur at posuere ipsum. Ut a sollicitudin
+                massa. Proin pellentesque, dui quis tincidunt aliquam, mauris turpis ullamcorper nulla, id consequat
+                massa lacus ut libero. Sed pretium leo venenatis est bibendum, eu blandit nibh mollis. Integer convallis
+                malesuada mauris, facilisis pretium nisl. Cras et pulvinar augue, et euismod sapien. Maecenas egestas
+                ante nunc, sed finibus nulla ullamcorper sit amet.
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ornare justo at mauris tincidunt
+                luctus. Nullam scelerisque, ligula at facilisis mattis, magna risus hendrerit massa, vel commodo tortor
+                nunc vel libero. Ut vulputate tempor neque, vel hendrerit sem hendrerit a. Maecenas ullamcorper leo sit
+                amet augue condimentum, ut lobortis neque porta. Aliquam ultricies, ex et vulputate mattis, libero nulla
+                efficitur lectus, ut imperdiet massa ex vel dolor. Nam scelerisque urna lacus, eu finibus turpis porta
+                et. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris
+                vitae imperdiet nulla, eu varius dui. Cras et massa nisi. Curabitur at posuere ipsum. Ut a sollicitudin
+                massa. Proin pellentesque, dui quis tincidunt aliquam, mauris turpis ullamcorper nulla, id consequat
+                massa lacus ut libero. Sed pretium leo venenatis est bibendum, eu blandit nibh mollis. Integer convallis
+                malesuada mauris, facilisis pretium nisl. Cras et pulvinar augue, et euismod sapien. Maecenas egestas
+                ante nunc, sed finibus nulla ullamcorper sit amet.
+            </p>
+            <p>
+                Cras commodo dui vitae lacus sodales, sed volutpat ante sagittis. Fusce in diam et nisi fringilla tempus
+                eget sit amet magna. Vivamus euismod, lectus gravida consequat maximus, nulla ante ultricies odio, sed
+                semper nisl sem vel nisi. Etiam justo enim, viverra quis mauris ac, volutpat fermentum sem. Duis augue
+                mi, tincidunt eu blandit ac, mattis at est. Aenean gravida urna nulla, eu interdum lacus hendrerit ut.
+                Phasellus efficitur purus et turpis maximus fringilla.
+            </p>
+            <p>
+                Cras sed augue scelerisque est elementum aliquet a hendrerit felis. Orci varius natoque penatibus et
+                magnis dis parturient montes, nascetur ridiculus mus. Vivamus nibh purus, rutrum vitae eros eget, varius
+                commodo tellus. Quisque elementum lorem rhoncus magna molestie imperdiet. Praesent aliquam tempus velit
+                vel consequat. Cras nisl dui, scelerisque sit amet cursus molestie, posuere varius nisi. In eleifend
+                enim a pharetra egestas. Sed ipsum nisi, scelerisque vel pharetra sed, fermentum non nulla. Duis eget
+                egestas neque. Nulla orci sem, auctor ac tempor at, convallis non odio. Vestibulum eleifend diam quis
+                pharetra efficitur. Fusce a bibendum velit. Morbi scelerisque porta sapien, sed cursus tellus eleifend
+                ut. Etiam dictum dapibus massa non mattis. Praesent sed vulputate ante.
+            </p>
+            <p>
+                Quisque rutrum dolor sed eros finibus ultricies vel ut erat. Pellentesque tincidunt velit id dui
+                commodo, vel ultrices lorem tincidunt. Suspendisse lectus urna, aliquam ac interdum sit amet, porttitor
+                scelerisque justo. Pellentesque vel euismod turpis. Morbi tellus massa, feugiat tempor purus varius,
+                sodales faucibus dui. Phasellus blandit quam consequat varius tristique. Morbi non tellus congue,
+                pretium metus vel, posuere ante. Pellentesque pulvinar, ipsum non rhoncus ullamcorper, justo lectus
+                eleifend risus, eu ultricies massa orci et nibh. Vivamus posuere tellus quis dui scelerisque
+                sollicitudin. Integer ac nibh ut tortor efficitur venenatis. Mauris pretium finibus leo non iaculis.
+                Nunc a aliquet sem. Proin fringilla, augue quis sollicitudin porttitor, ex sem pellentesque erat, at
+                ornare diam ipsum ut purus. Aliquam sed eleifend nisi, vehicula vestibulum risus. Morbi ullamcorper erat
+                eros, a varius diam vestibulum in.
+            </p>
+            <p>
+                Mauris ut nisl accumsan, sagittis lacus id, dictum lectus. Quisque sit amet ipsum erat. Sed non odio ut
+                nisl dignissim volutpat. Phasellus vehicula condimentum sem et varius. Maecenas ipsum mi, ultrices eu
+                rhoncus a, ultrices sed mi. Nullam fringilla nisl orci, vitae pulvinar nulla convallis nec. Fusce
+                vulputate sed velit vitae interdum. Cras auctor ex quis tempor facilisis. Praesent tincidunt tortor nec
+                ligula varius tempus. Ut placerat purus quis fringilla interdum. Curabitur vel viverra leo. Nulla
+                facilisi. Praesent nisl urna, convallis ut tincidunt id, vulputate nec massa. Quisque laoreet orci at
+                dolor mollis, eu blandit felis sodales
+            </p>
+            <p>
+                Cras commodo dui vitae lacus sodales, sed volutpat ante sagittis. Fusce in diam et nisi fringilla tempus
+                eget sit amet magna. Vivamus euismod, lectus gravida consequat maximus, nulla ante ultricies odio, sed
+                semper nisl sem vel nisi. Etiam justo enim, viverra quis mauris ac, volutpat fermentum sem. Duis augue
+                mi, tincidunt eu blandit ac, mattis at est. Aenean gravida urna nulla, eu interdum lacus hendrerit ut.
+                Phasellus efficitur purus et turpis maximus fringilla.
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ornare justo at mauris tincidunt
+                luctus. Nullam scelerisque, ligula at facilisis mattis, magna risus hendrerit massa, vel commodo tortor
+                nunc vel libero. Ut vulputate tempor neque, vel hendrerit sem hendrerit a. Maecenas ullamcorper leo sit
+                amet augue condimentum, ut lobortis neque porta. Aliquam ultricies, ex et vulputate mattis, libero nulla
+                efficitur lectus, ut imperdiet massa ex vel dolor. Nam scelerisque urna lacus, eu finibus turpis porta
+                et. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris
+                vitae imperdiet nulla, eu varius dui. Cras et massa nisi. Curabitur at posuere ipsum. Ut a sollicitudin
+                massa. Proin pellentesque, dui quis tincidunt aliquam, mauris turpis ullamcorper nulla, id consequat
+                massa lacus ut libero. Sed pretium leo venenatis est bibendum, eu blandit nibh mollis. Integer convallis
+                malesuada mauris, facilisis pretium nisl. Cras et pulvinar augue, et euismod sapien. Maecenas egestas
+                ante nunc, sed finibus nulla ullamcorper sit amet.
+            </p>
+        </div>
     </div>
 </div>
