--- a/views/framework/apps/apps-inc.ejs
+++ b/views/framework/apps/apps-inc.ejs
@@ -5,9 +5,7 @@
   </div>
   <div class="container-alert alert-apps"></div>
   <div class="container-apps">
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#app-test">
-      <i class="bi bi-arrows-fullscreen"></i>&nbsp;&nbsp;App
-    </button>
+    <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#template-app" aria-controls="template-app">App Modelo</button>
   </div>
 </div>
 
