--- a/views/pages/framework.ejs
+++ b/views/pages/framework.ejs
@@ -18,6 +18,7 @@
             </main>
             <%-include ../blocks/vendor.ejs %>
                 <%-include ../blocks/aes-help-dock.ejs %>
+                <%-include ../blocks/app-test.ejs %>
                     <form><input type="hidden" id="context" value="desktop"></form>
     </body>
     <script src="assets/javascript/framework/utils/api/request.js"></script>
