--- a/views/blocks/app-test.ejs
+++ b/views/blocks/app-test.ejs
@@ -7,7 +7,8 @@
         <span class="text-danger mx-1"><i class="bi bi-heart-fill"></i></span> <a
             href="https://getbootstrap.com/docs/5.0/getting-started/introduction/" target="_blank"><i
                 class="bi bi-bootstrap-fill"></i></a>
-        <a href="#nav-apps-tab" class="text-reset mx-2" data-bs-dismiss="offcanvas" aria-label="Close"><i class="bi bi-x-circle"></i></a>
+        <a href="#nav-apps-tab" class="text-reset mx-2" data-bs-dismiss="offcanvas" aria-label="Close"><i
+                class="bi bi-x-circle"></i></a>
     </div>
 </div>
 <div class="offcanvas-body">
@@ -21,12 +22,29 @@
                 aria-controls="nav-colors-app-template" aria-selected="false">Cores</button>
             <button class="nav-link" id="nav-table-app-template-tab" data-bs-toggle="tab"
                 data-bs-target="#nav-table-app-template" type="button" role="tab" aria-controls="nav-table-app-template"
-                aria-selected="false">Tabelas</button>
+                aria-selected="false">Conteúdo</button>
         </div>
     </nav>
     <div class="tab-content" id="nav-tabContent">
         <div class="tab-pane my-2 show active" id="nav-form-app-template" role="tabpanel"
             aria-labelledby="nav-form-app-template-tab">
+            <div class="my-3 container-fluid">
+                <button type="button" class="btn btn-primary position-relative">
+                    Inbox
+                    <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                        99+
+                        <span class="visually-hidden">unread messages</span>
+                    </span>
+                </button>
+            </div>
+            <div class="my-3 container-fluid">
+                <a class="btn btn-primary" data-bs-toggle="modal" href="#exampleModalToggle" role="button">Open first
+                    modal</a>
+            </div>
+            <div class="my-2 container-fluid">
+                <label for="customRange1" class="form-label">Example range</label>
+                <input type="range" class="form-range" id="customRange1">
+            </div>
             <div class="my-2 container-fluid">
                 <form class="row g-3">
                     <div class="col-md-6">
@@ -73,20 +91,6 @@
                         <button type="submit" class="btn btn-primary">Sign in</button>
                     </div>
                 </form>
-            </div>
-
-            <div class="my-4 container-fluid">
-                <button type="button" class="btn btn-primary position-relative">
-                    Inbox
-                    <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-                        99+
-                        <span class="visually-hidden">unread messages</span>
-                    </span>
-                </button>
-            </div>
-            <div class="my-2 container-fluid">
-                <label for="customRange1" class="form-label">Example range</label>
-                <input type="range" class="form-range" id="customRange1">
             </div>
             <div class="my-2 container-fluid">
                 <div class="form-check">
@@ -175,8 +179,7 @@
                         </div>
                     </div>
                 </div>
-                <a class="btn btn-primary" data-bs-toggle="modal" href="#exampleModalToggle" role="button">Open first
-                    modal</a>
+
             </div>
 
 
@@ -240,6 +243,14 @@
         <div class="tab-pane my-3" id="nav-table-app-template" role="tabpanel"
             aria-labelledby="nav-table-app-template-tab">
             <div class="card my-3">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                        additional content. This content is a little bit longer.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+            </div>
+            <div class="card my-3">
                 <div class="card-header">
                     Featured
                 </div>
@@ -249,7 +260,7 @@
                     <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
             </div>
-            <div class="accordion" id="accordionExample">
+            <div class="accordion my-3" id="accordionExample">
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingOne">
                         <button class="accordion-button" type="button" data-bs-toggle="collapse"
@@ -312,75 +323,73 @@
                         </div>
                     </div>
                 </div>
+                <div class="table-responsive my-3">
+                    <table class="table table-dark table-hover">
+                        <caption>List of users</caption>
+                        <thead>
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">First</th>
+                                <th scope="col">Last</th>
+                                <th scope="col">Handle</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">1</th>
+                                <td>Mark</td>
+                                <td>Otto</td>
+                                <td>@mdo</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">2</th>
+                                <td>Jacob</td>
+                                <td>Thornton</td>
+                                <td>@fat</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">3</th>
+                                <td>Larry</td>
+                                <td>the Bird</td>
+                                <td>@twitter</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="table-responsive my-3">
+                    <table class="table caption-top">
+                        <caption>List of users</caption>
+                        <thead>
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">First</th>
+                                <th scope="col">Last</th>
+                                <th scope="col">Handle</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">1</th>
+                                <td>Mark</td>
+                                <td>Otto</td>
+                                <td>@mdo</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">2</th>
+                                <td>Jacob</td>
+                                <td>Thornton</td>
+                                <td>@fat</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">3</th>
+                                <td>Larry</td>
+                                <td>the Bird</td>
+                                <td>@twitter</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
-        <div class="table-responsive my-2">
-            <table class="table table-dark table-hover">
-                <caption>List of users</caption>
-                <thead>
-                    <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">First</th>
-                        <th scope="col">Last</th>
-                        <th scope="col">Handle</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">2</th>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>@fat</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">3</th>
-                        <td>Larry</td>
-                        <td>the Bird</td>
-                        <td>@twitter</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-        <div class="table-responsive my-2">
-            <table class="table caption-top">
-                <caption>List of users</caption>
-                <thead>
-                    <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">First</th>
-                        <th scope="col">Last</th>
-                        <th scope="col">Handle</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">2</th>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>@fat</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">3</th>
-                        <td>Larry</td>
-                        <td>the Bird</td>
-                        <td>@twitter</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
     </div>
-</div>
-</div>
 </div>
