--- a/views/blocks/dock.ejs
+++ b/views/blocks/dock.ejs
@@ -1,7 +1,8 @@
-<nav class="nav p-2" style="background-color: #333333;">
+<nav class="nav p-2" style="background-color: #333333;" id="nav-dock-top">
     <div class="container-fluid">
-        <button data-bs-toggle="offcanvas" data-bs-target="#aes-help-dock" role="button" aria-controls="aes-help-dock" class="btn btn-sm btn-success"><i class="bi bi-question-circle"></i></button>
-        <span class="mx-2"><img src="assets/images/arte-e-software-cubo-branco.svg" height="30rem"></span>
+       <a class="mx-2" href="/">
+        <img src="assets/images/arte-e-software-cubo-branco.svg" height="30rem">
+    </a>
     </div>
 </nav>
 <style>
@@ -11,7 +12,7 @@
     }
 
 </style>
-<nav class="navbar navbar-expand fixed-bottom bg-transparente">
+<nav class="navbar navbar-expand fixed-bottom bg-transparente"  id="nav-dock-bottom">
     <div class="container-fluid">
         <div class="container-fluid">
             <ul class="nav nav-tabs" id="nav-bar" role="tablist">
@@ -41,11 +42,11 @@
             </ul>
         </div>
         <div class="btn-group dropup">
-            <button type="button" class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown"
+            <button type="button" class="btn btn-success dropdown-toggle" data-bs-toggle="dropdown"
                 aria-expanded="false">
                 <img src="favicon.svg" height="25rem;">
             </button>
-            <ul class="dropdown-menu bg-transparent border-0 mb-1">
+            <ul class="dropdown-menu mb-2" style="min-width: 4rem; text-align: center; padding: 6px; background-color: #888888; opacity: .95;">
                 <li>
                     <div class="form-check form-switch text-warning" id="icon-checkbox-show-all-warning-alerts">
                         <label class="form-check-label" for="checkbox-show-all-warning-alerts"><i
@@ -56,11 +57,14 @@
                 <li>
                     <div class="form-check form-switch text-info" id="icon-checkbox-show-all-info-alerts">
                         <label class="form-check-label" for="checkbox-show-all-info-alerts"><i
-                                class="bi bi-info-circle"></i></label>
+                                class="bi bi-info-circle-fill"></i></label>
                         <input class="form-check-input" type="checkbox" id="checkbox-show-all-info-alerts" checked>
                     </div>
                 </li>
-                <li><a class="btn btn-success mt-1" href="/framework"><i class="bi bi-arrow-clockwise"></i></a></li>
+                <li><a class="btn btn-success my-1" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
+                    <i class="bi bi-info-circle-fill"></i>
+                </a></li>
+                <li><a class="btn btn-warning my-1" href="/framework"><i class="bi bi-arrow-clockwise"></i></a></li>
             </ul>
         </div>
     </div>
