observer ok, falta aplicar regra de type x lenght - null x search

--- a/views/framework/tools/entity/entity-create-inc.ejs
+++ b/views/framework/tools/entity/entity-create-inc.ejs
@@ -50,7 +50,7 @@
                     <li class="nav-item" role="presentation">
                         <button class="nav-link" id="nav-code-json-tab" data-bs-toggle="tab"
                             data-bs-target="#nav-code-json" type="button" role="tab" aria-controls="nav-code-json"
-                            aria-selected="false"><i class="bi bi-code-square"></i></button>
+                            aria-selected="false">{ }</button>
                     </li>
                 </ul>
                 <div class="tab-content">
