Entity pronta no client.. agora é com o Node

--- a/views/framework/tools/entity/entity-create-inc.ejs
+++ b/views/framework/tools/entity/entity-create-inc.ejs
@@ -92,7 +92,7 @@
                     <div>
                         <button class="btn btn-outline-secondary" id="btn-entity-create-config"><i
                                 class="bi bi-box"></i>&nbsp;&nbsp;Limpar</button>
-                        <button class="btn btn-success" id="btn-entity-create">Criar&nbsp;&nbsp;<i
+                        <button class="btn btn-success" id="btn-entity-create" disabled>Criar&nbsp;&nbsp;<i
                                 class="bi bi-box"></i></button>
                     </div>
                 </div>
