app-aes-help-dock

--- a/views/pages/framework.ejs
+++ b/views/pages/framework.ejs
@@ -17,8 +17,8 @@
                 </div>
             </main>
             <%-include ../blocks/vendor.ejs %>
-                <%-include ../blocks/aes-help-dock.ejs %>
-                <%-include ../blocks/app-test.ejs %>
+                <%-include ../apps/app-aes-help-dock.ejs %>
+                <%-include ../apps/app-test.ejs %>
                     <form><input type="hidden" id="context" value="desktop"></form>
     </body>
     <script src="assets/javascript/framework/utils/api/request.js"></script>
